# 3d-car

./: CMakeLists.txt  build.cmd  pack_release.cmd
shaders/: overlay.frag  overlay.vert  scene.frag  scene.vert
src/: audio.cpp  audio.h  landscape.cpp  landscape.h  main.cpp  noise.cpp  noise.h  palette.h  renderer.cpp  renderer.h  roads.cpp  roads.h  terrain.cpp  terrain.h  terrain_shapes.cpp  terrain_shapes.h  vecfont.cpp  vecfont.h  vehicle.cpp  vehicle.h  vertex.h  vk_core.cpp  vk_core.h  window.cpp  window.h
